feat: add date created property
